--- a/src/views/code/index.less
+++ b/src/views/code/index.less
@@ -1,3 +1,15 @@
-.app-code {
-	padding-top: 45px;
+.code-controls-box {
+	height: 40px;
+	display: flex;
+	padding: 0;
+	align-items: center;
+	position: relative;
+	.ant-avatar {
+		position: absolute;
+		bottom: 10px;
+	}
+	.kong {
+		flex: 1;
+	}
+	// padding-top: 45px;
 }
