--- a/src/App.less
+++ b/src/App.less
@@ -1,43 +1,47 @@
 .App {
-  header {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    background-color: #ffffff;
-    box-shadow: 0px 5px 40px 0px rgba(17, 58, 93, 0.1) !important;
-    .nav-content {
-      width: 1140px;
-      padding: 15px 39px;
-      box-sizing: border-box;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      .close-bg {
-        background-color: black;
-        color: white;
-        border: 1px solid black;
-        &.active {
-          background-color: white;
-          color: black;
-          border: 1px solid white;
-        }
-      }
-    }
-  }
-  main {
-    display: flex;
-    width: 1140px;
-    padding: 15px;
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding-top: 70px;
+	width: 100%;
+	header {
+		width: 100%;
+		min-width: 1140px;
+		padding: 15px;
+		box-sizing: border-box;
+		height: 100px;
+		margin: 0 auto;
+		background-color: #ffffff;
+		box-shadow: 0px 5px 40px 0px rgba(17, 58, 93, 0.1) !important;
+		.nav-content {
+			width: 1110px;
+			padding: 15px 39px;
+			box-sizing: border-box;
+			margin: 0 auto;
+			display: flex;
+			align-items: center;
+			justify-content: flex-end;
+			.close-bg {
+				background-color: black;
+				color: white;
+				border: 1px solid black;
+				&.active {
+					background-color: white;
+					color: black;
+					border: 1px solid white;
+				}
+			}
+		}
+	}
+	main {
+		display: flex;
+		width: 1140px;
+		padding: 15px;
+		box-sizing: border-box;
+		margin: 0 auto;
+		padding-top: 70px;
 
-    .app-container {
-      flex: 1;
-      .p-24 {
-        padding: 0 24px;
-      }
-    }
-  }
+		.app-container {
+			flex: 1;
+			.p-24 {
+				padding: 0 24px;
+			}
+		}
+	}
 }
