--- a/src/App.less
+++ b/src/App.less
@@ -17,16 +17,16 @@
 			display: flex;
 			align-items: center;
 			justify-content: flex-end;
-			.close-bg {
-				background-color: black;
-				color: white;
-				border: 1px solid black;
-				&.active {
-					background-color: white;
-					color: black;
-					border: 1px solid white;
-				}
-			}
+			// .close-bg {
+			// 	background-color: black;
+			// 	color: white;
+			// 	border: 1px solid black;
+			// 	&.active {
+			// 		background-color: white;
+			// 		color: black;
+			// 		border: 1px solid white;
+			// 	}
+			// }
 		}
 	}
 	main {
