--- a/src/views/list/list.less
+++ b/src/views/list/list.less
@@ -1,10 +1,11 @@
 .app-list {
 	padding: 0 24px;
 	.app-list-item {
-		display: inline-block;
 		margin-bottom: 15px;
-		border-radius: 16px;
-		padding: 7px 15px;
-		background-color: rgb(209, 209, 209);
+		margin-right: 8px;
 	}
+}
+.ant-modal-body {
+	// max-height: 540px;
+	// overflow-y: scroll;
 }
