--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,18 @@
 .App {
 	width: 100%;
+	height: 100vh;
+	position: relative;
+	#liveBgBox {
+		// display: none;
+		// opacity: 0;
+		z-index: -2;
+		pointer-events: none;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		transition: opacity 1s, transform 0.25s, filter 0.25s;
+	}
 	header {
 		width: 100%;
 		min-width: 1140px;
@@ -7,7 +20,10 @@
 		box-sizing: border-box;
 		height: 100px;
 		margin: 0 auto;
-		background-color: #ffffff;
+		// background-color: rgba(255, 255, 255, 0.5);
+		// backdrop-filter: blur(10px);
+		// text-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+
 		box-shadow: 0px 5px 40px 0px rgba(17, 58, 93, 0.1) !important;
 		.nav-content {
 			width: 1110px;
@@ -17,16 +33,6 @@
 			display: flex;
 			align-items: center;
 			justify-content: flex-end;
-			// .close-bg {
-			// 	background-color: black;
-			// 	color: white;
-			// 	border: 1px solid black;
-			// 	&.active {
-			// 		background-color: white;
-			// 		color: black;
-			// 		border: 1px solid white;
-			// 	}
-			// }
 		}
 	}
 	main {
@@ -36,12 +42,24 @@
 		box-sizing: border-box;
 		margin: 0 auto;
 		padding-top: 70px;
-
+		// max-height: 500px;
+		// overflow-y: scroll;
+		.ant-menu {
+			// background-color: rgba(255, 255, 255, 0.2);
+			// backdrop-filter: blur(30px);
+		}
 		.app-container {
 			flex: 1;
+			// background-color: rgba(255, 255, 255, 0.2);
+			// backdrop-filter: blur(30px);
 			.p-24 {
 				// padding: 0 24px;
 			}
+		}
+		.ant-menu-inline,
+		.ant-menu-vertical,
+		.ant-menu-vertical-left {
+			border: none;
 		}
 	}
 }
